Corrected errors and improved code readability

--- a/pages/styles/university-based.css
+++ b/pages/styles/university-based.css
@@ -25,11 +25,13 @@
     margin-bottom: 12svh;
 }
 .Organization-1{
+    display: block;
     display: flex;
     flex-direction: row;
 }
 
 .Organization{
+    display: block;
     margin-top: 2vh;
     padding: 10px 5px 3px 3px;
     border-top:2px solid #D9D4D7;
@@ -61,6 +63,11 @@
     cursor: pointer;
 }
 
+.arrow{
+    margin-top: 6vh;
+    width: 3vw;
+    height: 3vh;
+}
 
 .report-container{
     display: flex;
@@ -68,10 +75,61 @@
     align-items: center;
     align-content: center;
 }
-
-@media screen and (max-width:360px) {
+@media screen and (max-width:768px){
+    .title{
+        font-size: 24px;
+    }
+    .title-about{
+        font-size: 16px;
+    }
+    .org-logo{
+        width: 75px;
+        height: 75px;
+    }
+    .org-name{
+        font-size:18px;
+        margin-top: 3vh;
+    }
+    .universities-container{
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .arrow{
+        margin-top: 5vh;
+        width: 2vw;
+         height: 2vh;
+    }
+}
+@media screen and (max-width:500px){
     .title-about br{
         display: none;
+    }
+    .title-about{
+        font-size: 14px;
+    }
+    .org-logo{
+        width: 50px;
+        height: 50px;
+    }
+    .org-name{
+        font-size: 17px;
+        margin-top: 2vh;
+    }
+    .Organization-1{
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+    } .arrow{
+        margin-top: 3vh;
+        width: 2vw;
+        height: 2vh;
+    }
+    .Organization{
+        padding: 7.5px 3.75px 2.25px 2.25px;
+    }
+}
+@media screen and (max-width:360px) {
+    .title{
+        font-size: 22px;
     }
     .org-logo {
         margin-left: 3vh;
@@ -89,5 +147,13 @@
     }
     #usa-name{
         font-size: 14px;
+    }
+    .arrow{
+        margin-top: 3vh;
+        height: 10px;
+        width: 10px;
+    }
+    .Organization{
+        padding: 5px 2.5px 1.5px 1.5px;
     }
 }
